kustomize/overlays/prod/rqlite-scale.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rqlite
spec:
  replicas: 5
